# pulseaudio_app2mic

./: .gitignore  LICENSE  requirements.txt  setup.cfg
src/pulseaudio_app2mic/: app_logger.py  main.py  pulse_rerouting.py  rerouting_manager.py  task_bar_icon.py  task_bar_icon_app.py  task_bar_menu.py
