[metadata]
name = pulseaudio_app2mic
version = 0.1.0
license = MIT
author = Danil Pleshakov
author_email = ddrambler@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pyqt5
    pulsectl
scripts =
    bin/pulseaudio_app2mic

[options.packages.find]
where=src